<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"

        android:paddingTop="30dp"
        android:textSize="30sp"
        />

    <TextView
        android:layout_marginTop="@dimen/margin_basex4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/username"
        android:id="@+id/tv_user_name"
        android:layout_below="@+id/tv_sign_in"
        android:paddingTop="@dimen/margin_basex4"
        android:gravity="fill_vertical"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/et_username"
        android:hint="@string/hint1"
        android:layout_alignTop="@+id/tv_user_name"
        android:layout_toEndOf="@id/tv_user_name"
        android:layout_alignBottom="@id/tv_user_name"
        android:autofillHints="@string/hint1"
        android:inputType="text"
        />

    <TextView
        android:layout_marginTop="@dimen/margin_basex4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/password"
        android:id="@+id/tv_password"
        android:layout_below="@id/et_username"
        android:gravity="fill_vertical"

        />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_password"
        android:layout_toEndOf="@id/tv_password"
        android:layout_below="@id/et_username"
        android:hint="@string/hint2"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:id="@+id/bt_sign_in"
        android:layout_below="@id/et_password"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up"
        android:layout_below="@id/bt_sign_up"
        />

    <Button
        android:id="@+id/bt_signin_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_sign_up"
        android:text="@string/signinviaFacebook"


        />


</RelativeLayout>
