<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sign_in"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
                ></TextView>


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        ></TextView>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint1"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/tv_username"
        app:layout_constraintTop_toTopOf="@id/tv_username"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_password"
        android:text="@string/password"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint2"
        android:inputType="textPassword"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toEndOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintTop_toTopOf="@id/tv_password"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:text="@string/sign_in"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_sign_up"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:id="@+id/bt_signin_facebook"
        android:text="@string/signinviaFacebook"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/bt_sign_up"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
          />


</androidx.constraintlayout.widget.ConstraintLayout>

